Checkin for timeless@bemail.org to fix bug 128223: don't assert if a child datasource doesn't return an (empty) enumerator along with NS_RDF_NO_VALUE. r=tingley, sr=darin, a=shaver